syntax.bnf

expr            =  single | compound .
single          =  int | float | complex | string | bool | none .
compound        =  tuple | dict | list | set .

digit           =  '0'...'9' .
digitnonzero    =  '1'...'9' .

int             =  ['-'] digitnonzero {digit} .

float           =  pointfloat | exponentfloat .
pointfloat      =  [int] fraction .
fraction        =  '.' digit { digit } .
exponentfloat   =  (int | pointfloat) exponent .
exponent        =  ("e" | "E") ["+" | "-"] digit { digit } .

complex         = complextuple | imaginary .
imaginary       = ['+' | '-' ] ( float | int ) 'j' .
complextuple    = '(' ( float | int ) imaginary ')' .

string          = singlequoted | doublequoted .
singlequoted    = '\'' stringvalue_escaped_singlequoted '\'' .
doublequoted    = '"' stringvalue_escaped_doublequotes '"' .

bool            = 'True' | 'False' .
none            = 'None' .


tuple = tuple_empty | tuple_one | tuple_more .
list = list_empty | list_one | list_more .
set = set_one | set_more .
dict = dict_empty | dict_one | dict_more .

tuple_empty = '()' .
tuple_one = '(' element_with_comma ')' .
tuple_more = '(' element_with_comma { element_with_comma } expr ')' .

list_empty = '[]' .
list_one = '[' expr ']' .
list_more = '[' element_with_comma { element_with_comma } expr ']' .

set_one = '{' expr '}' .
set_more = '{' element_with_comma { element_with_comma } expr '}' .

dict_one = '{' keyvalue '}' .
dict_more = '{' keyvalue_with_comma { keyvalue_with_comma } keyvalue '}' .
keyvalue = expr ':' expr .
keyvalue_with_comma = keyvalue ',' .
element_with_comma = expr ',' .


